changes for spacing issue

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 #main-video {
     max-width: 90vw;
     max-height: 90vh;
-    border-radius: 8px;
+    border-radius: 5px;
 }
 
 @media only screen and (min-width: 820px) {
@@ -29,7 +29,7 @@ html {
     align-items: center;
     justify-content: center;
     cursor: url('cursors/smiski.cur'), default;
-    padding-top: 3.5rem;
+    padding-top: 1.5rem;
     animation: catSwap 10s infinite alternate;
   }
 
@@ -140,7 +140,7 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding-top: 3.5rem;
+    padding-top: 1.5rem;
     animation: catSwap 10s infinite alternate;
   }
 
